#+STARTUP: align fold nodlcheck hidestars oddeven lognotestate
#+TITLE: ORG-INFO.JS: Changes
#+AUTHOR: Sebastian Rose
#+EMAIL:
#+LANGUAGE: en
#+INFOJS_OPT: path:org-info.js
#+INFOJS_OPT: toc:nil localtoc:t view:info mouse:underline
#+INFOJS_OPT: up:http://orgmode.org/worg/
#+INFOJS_OPT: home:http://orgmode.org buttons:nil


* 2009-06-22

  * *NOTE: now GPL 3*

  * FIX: go to previous sibling, even if it's the first one.

  * Removed some more unused stuff and fixed typos (=this.INPUT_FIELD=, =DEBUG=...).

  * All names of regular expressions end in =_REGEX=.

  * FIX: Altering the history lead to jumping of the page.

  * Uppercase names everywehre. I want this to distinguish class fields from
    functions and temporary variables. Stay YUI compressor friendly when we
    shorten the names. Needed for the rest of the todays changes.

  * Replaced =this.= by a local variable where possible. Decreased org-info.js
    size by 1.8 Kb.

  * Add a Makefile target for realy small org-info.js. This is not exactly
    perfect, but decreases the resulting file by about 10 Kb.

  * Added =hacking.org= to explain what happens here a bit.

  * Reworked the Docs. Oha, I wonder how noone complained about that...

  * FIX html tags in local toc.


* 2009-06-17

  + Manipulate the histories current location.
    So if one clicks a link to an external file, the browser's `back' button
    will bring the user back to the last section visited in the file.

  + If one faces the internal histories end using `b' and `B', he may now go
    back/forward in the browsers history by repeatedly pressing `b' and `B'
    respectively.



* 2009-04-22

  + Choose the human-readable IDs for links by regexp again.
  + Fix the `g' command.
  + Fix: still support old section IDs.

* 2009-04-21 - Org-mode 6.26

  + New way to detect the IDs for sections. The script does not search for '#sec-'
    anymore. Instead, the new human readable IDs are used as well.
