@@ -9,6 +9,13 @@
 #+INFOJS_OPT: home:http://orgmode.org buttons:nil
 
 
+* 2009-06-25
+
+  * Fix for start section.
+    I a section was removed and the *.org file was published again, we saw an
+    empty page when browsing to that old location (e.g. =xy.html#sec-11=). Now the
+    first section is shown instead.
+
 * 2009-06-22
 
   * *NOTE: now GPL 3*
